--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top responsive website building</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple offline web page design software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -198,7 +198,7 @@
                   <h3 class="mbr-section-title display-2">VJ Bala<br></h3>
                   <div class="lead">
 
-                    <p><em>Founder | CEO &amp; Chief Marketer<br></em><br>I build and scale global marketing for high-growth startups and enterprises (&lt;$50M to $2B) with 20+ years of business (strategy, marketing, partnerships), technology and consulting experience at Fortune 500 to Inc 500. As Executive Team member for 10 years, I drove 2-4X growth for 5 technology businesses in healthcare, government, manufacturing and other sectors by building brand, market position, and sales.<br><br>For startups, enterprises with new business focus, and non-profits, I help realize growth through marketing levers: brand building, new products/markets, demand creation, customer engagement.<br></p>
+                    <p><em>Founder | CEO &amp; Chief Marketer<br></em><br>I build and scale global marketing for high-growth startups and enterprises (&lt;$50M to $2B) with 20+ years of business (strategy, marketing, partnerships), technology and consulting experience at Fortune 500 to Inc 500. As Executive Team member for 10 years, I drove 2-4X growth for 5 technology businesses in healthcare, government, manufacturing and other sectors by building brand, market position, and sales.<br><br>For startups and non-profits, I help tap multiple marketing levers for growth: brand building, new products/markets, demand creation, customer engagement.<br></p>
 
                   </div>
 
