--- a/non-profits.html
+++ b/non-profits.html
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top drag and drop site creator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4a" style="background-image: url(assets/images/non-profit.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">top web page design</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4a" style="background-image: url(assets/images/non-profit.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -279,7 +279,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-info" href="index.html"><strong>SEE ALL SERVICES</strong></a> <a class="btn btn-info-outline btn-info" href="featured-blocks.html"><strong>SEE FEATURED</strong></a></div>
+                <div class="text-xs-center"><a class="btn btn-info" href="index.html"><strong>SEE ALL SERVICES</strong></a> <a class="btn btn-info-outline btn-info" href="featured.html"><strong>SEE FEATURED</strong></a></div>
             </div>
         </div>
     </div>
