--- a/featured.html
+++ b/featured.html
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy wysiwyg web page generator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">html web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-3n" style="background-image: url(assets/images/jigsaw-puzzle-concept.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
 
