create github pages

--- a/#marketing-blocks.html
+++ b/#marketing-blocks.html
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-1y" style="background-image: url(assets/images/business-teamwork-on-puzzle-pieces-to-success-1.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg site design</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader3 mbr-parallax-background mbr-after-navbar" id="extHeader3-1y" style="background-image: url(assets/images/business-teamwork-on-puzzle-pieces-to-success-1.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
 
@@ -241,7 +241,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="0" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/brand-presence-3000x2600-5144.png">
+                                    <img alt="" src="assets/images/brand-presence-3000x2600-5155.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -258,7 +258,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="1" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/product-market-fit-3000x2600-7745.png">
+                                    <img alt="" src="assets/images/product-market-fit-3000x2600-7756.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -275,7 +275,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="2" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/customer-profile-3000x2600-3346.png">
+                                    <img alt="" src="assets/images/customer-profile-3000x2600-3357.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -292,7 +292,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="3" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/sales-enablement-3000x2600-8747.png">
+                                    <img alt="" src="assets/images/sales-enablement-3000x2600-8758.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -309,7 +309,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="4" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/brand-campaign-3000x2600-5148.png">
+                                    <img alt="" src="assets/images/brand-campaign-3000x2600-5159.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -326,7 +326,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="5" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/product-launch-3000x2600-9149.png">
+                                    <img alt="" src="assets/images/product-launch-3000x2600-9160.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -360,7 +360,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="7" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/sales-campaign-3000x2600-1250.png">
+                                    <img alt="" src="assets/images/sales-campaign-3000x2600-1261.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -377,7 +377,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="8" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/brand-affinity-3000x2600-7251.png">
+                                    <img alt="" src="assets/images/brand-affinity-3000x2600-7262.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -394,7 +394,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="9" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/voice-of-customer-3000x2600-5852.png">
+                                    <img alt="" src="assets/images/voice-of-customer-3000x2600-5863.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -411,7 +411,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="10" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/product-adoption-3000x2600-6953.png">
+                                    <img alt="" src="assets/images/product-adoption-3000x2600-6964.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
@@ -428,7 +428,7 @@
                               <div class="galleryItem" href="#lb-extShop1-38" data-slide-to="11" data-toggle="modal">
                               <div class="item_overlay"></div>
                                   <div class="img_wraper">
-                                    <img alt="" src="assets/images/customer-advocacy-3000x2600-654.png">
+                                    <img alt="" src="assets/images/customer-advocacy-3000x2600-665.png">
                                   </div> 
                                   <span class="onsale" data-onsale="false" style="display: none;">*</span>
                                   <div class="sidebar_wraper"> 
