--- a/non-profits.html
+++ b/non-profits.html
@@ -75,7 +75,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop website generator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4a" style="background-image: url(assets/images/non-profit.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple web site development software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4a" style="background-image: url(assets/images/non-profit.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
