--- a/privacy.html
+++ b/privacy.html
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple web site creator software</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2y" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">responsive site development software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2y" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
